# mcp-ado-server

./: .env.example  .env.test  .gitignore  .gitmessage  .pre-commit-config-pragmatic.yaml  .pre-commit-config.yaml  CHANGELOG.md  FASTMCP_MIGRATION_COMPLETE.md  LICENSE  PROJECT_SUMMARY.md  README.md  VERIFICATION.md  debug_response.py  debug_tests.py  final_test.py  pyproject.toml  setup_dev.py  simple_server.py  test_client_fix.py  test_detailed.py  test_devcontainer_setup.py  test_server.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/prompts/: container.prompt.md  init.prompt.md  sec.prompt.md
.github/workflows/: ci.yml  release.yml  security.yml
docs/: API.md  ARCHITECTURE.md  DEV_CONTAINER_GUIDE.md  DEV_CONTAINER_SETUP.md  SECURITY_IMPLEMENTATION.md  VSCODE_SETUP.md
examples/: vscode-settings-python.json  vscode-settings.json
scripts/: security_scan.py
src/mcp_ado_server/: __init__.py  client.py  config.py  fastmcp_server.py  main.py  models.py  security.py  server.py  services.py
tests/: test_basic.py  test_client.py  test_config.py  test_fastmcp_integration.py  test_models.py  test_security.py
